# Nautilus-AquaVision-v0

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  DATASETS.md  MODEL_CARD.md  NOTICE  README.md  SHA256SUMS  onnx_requirements.json  onnx_requirements.md  pyproject.toml  requirements.txt
.github/workflows/: release-check.yml
configs/: aquavision.yaml  train_args.yaml
docs/: DATA_AUDIT.md
licenses/: CC-BY-4.0-NOTICE.txt
metrics/: summary.json  training_history.csv
notebooks/: train_aquavision.ipynb
scripts/: aquavision_builder.py  check_release.py  export_onnx.py  onnx_requirements.py  predict.py  validate.py
weights/: README.md
