[project]
name = "nautilus-aquavision"
version = "0.1.0a0"
description = "Experimental lightweight detector for floating objects on water surfaces"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Matheus Henrique" }]
dependencies = [
  "ultralytics==8.4.91",
  "onnx==1.19.1",
  "onnxruntime==1.23.2",
  "Pillow>=10,<12",
  "PyYAML>=6,<7",
]

[project.urls]
Repository = "https://github.com/TheusHen/Nautilus-AquaVision"

[tool.ruff]
line-length = 100
